# rust-mysql-simple

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  LICENSE-MIT  Makefile  README.md  README.tpl  appveyor.yml  azure-pipelines.yml  build.rs  conn.rs  consts.rs  error.rs  io.rs  lib.rs  packet.rs  pool.rs  scramble.rs  sha1.rs  value.rs
.cargo/: config.toml
conn/: mod.rs  pool.rs
scramble/: mod.rs  sha1.rs
src/: buffer_pool.rs  consts.rs  error.rs  io.rs  lib.rs  main.rs  my_uuid.rs  named_params.rs  packet.rs  parser.rs  queryable.rs  uuid.rs  value.rs
src/buffer_pool/: disabled.rs  enabled.rs  mod.rs
src/conn/: binlog_stream.rs  local_infile.rs  mod.rs  opts.rs  pool.rs  query.rs  query_result.rs  queryable.rs  replication.rs  stmt.rs  stmt_cache.rs  transaction.rs
src/conn/opts/: mod.rs  native_tls_opts.rs  pool_opts.rs  rustls_opts.rs
src/conn/pool/: inner.rs  mod.rs
src/error/: mod.rs
src/error/tls/: mod.rs  native_tls_error.rs  rustls_error.rs
src/io/: mod.rs  tcp.rs
src/io/tls/: mod.rs  native_tls_io.rs  rustls_io.rs
src/json/: mod.rs  rustc_integration.rs  serde_integration.rs
src/scramble/: mod.rs  sha1.rs
tests/: ca-cert.cer  ca-cert.pem  ca-key.pem  ca.crt  client-cert.pem  client-identity.p12  client-key.der  client-key.pem  client-key.pkcs8.der  client-key.pkcs8.pem  client.crt  client.p12  server-cert.pem  server-key.pem  server.crt
