[package]
name = "mysql"
version = "24.0.0"
authors = ["blackbeam"]
description = "Mysql client library implemented in rust"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/mysql"
repository = "https://github.com/blackbeam/rust-mysql-simple"
keywords = ["database", "sql"]
exclude = ["tests/*", ".*", "Makefile"]
categories = ["database"]
edition = "2021"
build = "build.rs"

[badges.azure-devops]
build = "1"
pipeline = "blackbeam.rust-mysql-simple"
project = "aikorsky/mysql Rust"

[lib]
name = "mysql"
path = "src/lib.rs"

[profile.bench]
debug = true

[features]
default = [
    "native-tls",

    # It is necessary to choose one of `flate2` backends.
    "flate2/zlib",

    # set of enabled-by-default mysql_common features
    "mysql_common/bigdecimal",
    "mysql_common/rust_decimal",
    "mysql_common/time",
    "mysql_common/frunk",

    "derive",
    # use global buffer pool by default
    "buffer-pool",
]
default-rustls = [
    "rustls-tls",

    # default-rustls uses rust_backend for flate2.
    "flate2/rust_backend",

    "mysql_common/bigdecimal",
    "mysql_common/rust_decimal",
    "mysql_common/time",
    "mysql_common/frunk",

    "derive",
    "buffer-pool",
]
minimal = ["flate2/zlib"]
rustls-tls = ["rustls", "webpki", "webpki-roots", "rustls-pemfile"]
buffer-pool = []
nightly = []
derive = ["mysql_common/derive"]

[dev-dependencies]
lazy_static = "1.4.0"
rand = "0.8.2"
serde_derive = "1"
time = "0.3"
frunk = "0.4"

[dependencies]
bufstream = "~0.1"
bytes = "1.0.1"
crossbeam = "0.8.1"
io-enum = "1.0.0"
flate2 = { version = "1.0", default-features = false }
lru = "0.10"
mysql_common = { version = "0.30", default-features = false }
socket2 = "0.5.2"
once_cell = "1.7.2"
pem = "2.0.1"
percent-encoding = "2.1.0"
serde = "1"
serde_json = "1"
twox-hash = "1"
url = "2.1"

[dependencies.native-tls]
version = "0.2.3"
optional = true

[dependencies.rustls]
version = "0.21.0"
features = ["dangerous_configuration"]
optional = true

[dependencies.rustls-pemfile]
version = "1.0.0"
optional = true

[dependencies.webpki]
version = "0.22.0"
features = ["std"]
optional = true

[dependencies.webpki-roots]
version = "0.23.0"
optional = true

[target.'cfg(target_os = "windows")'.dependencies]
named_pipe = "~0.4"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
