[package]
name = "mysql"
version = "26.0.1"
authors = ["blackbeam"]
description = "Mysql client library implemented in rust"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/mysql"
repository = "https://github.com/blackbeam/rust-mysql-simple"
keywords = ["database", "sql"]
exclude = ["tests/*", ".*", "Makefile"]
categories = ["database"]
edition = "2021"
build = "build.rs"

[badges.azure-devops]
build = "1"
pipeline = "blackbeam.rust-mysql-simple"
project = "aikorsky/mysql Rust"

[lib]
name = "mysql"
path = "src/lib.rs"

[profile.bench]
debug = true

[features]
default = ["minimal", "derive", "buffer-pool"]
default-rust = ["minimal-rust", "derive", "buffer-pool"]

# minimal feature set with system flate2 impl
minimal = ["flate2/zlib"]
# minimal feature set with rust flate2 impl
minimal-rust = ["flate2/rust_backend"]

# native TLS backend
native-tls = ["dep:native-tls"]
# rustls TLS backend with aws_lc_rs provider
rustls-tls = ["rustls", "rustls/aws_lc_rs"]
# rustls TLS backend with ring provider
rustls-tls-ring = ["rustls", "rustls/ring"]
# rustls TLS backend (no provider)
rustls = [
    "dep:rustls",
    "rustls/logging",
    "rustls/std",
    "rustls/tls12",
    "webpki",
    "webpki-roots",
    "rustls-pemfile",
]

# global buffer pool
buffer-pool = []
nightly = []

# mysql_common features
derive = ["mysql_common/derive"]
chrono = ["mysql_common/chrono"]
time = ["mysql_common/time"]
bigdecimal = ["mysql_common/bigdecimal"]
rust_decimal = ["mysql_common/rust_decimal"]
frunk = ["mysql_common/frunk"]
binlog = ["mysql_common/binlog"]
client_ed25519 = ["mysql_common/client_ed25519"]

[dev-dependencies]
mysql_common = { version = "0.36.0", features = ["time", "frunk"] }
rand = "0.8.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = "0.3"
frunk = "0.4"

[dependencies]
bufstream = "~0.1"
bytes = "1.0.1"
crossbeam-queue = "0.3.12"
crossbeam-utils = "0.8.21"
flate2 = { version = "1.0", default-features = false }
io-enum = "1.0.0"
lru = { version = "0.12", default-features = false }
mysql_common = { version = "0.36.0", default-features = false }
native-tls = { version = "0.2.3", optional = true }
pem = "3"
percent-encoding = "2.1.0"
rustls = { version = "0.23", optional = true, default-features = false }
rustls-pemfile = { version = "2.1", optional = true }
socket2 = "0.5.2"
twox-hash = { version = "2", default-features = false, features = ["xxhash64"] }
url = "2.1"
webpki = { version = "0.22", features = ["std"], optional = true }
webpki-roots = { version = "0.26", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
named_pipe = "~0.4"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
